samples/_failures_safe/1761793287_9a8b0b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_fd9be3b2.c: In function ‘main’:
./samples/SAFE/__tmp_fd9be3b2.c:170:12: error: missing terminating " character
  170 |     printf("State Machine Demo
      |            ^~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_fd9be3b2.c:170:5: error: expected expression at end of input
  170 |     printf("State Machine Demo
      |     ^~~~~~
./samples/SAFE/__tmp_fd9be3b2.c:170:5: error: expected declaration or statement at end of input
